fixed flickering issue on opera

--- a/Templates/default/_static/css/layout.css
+++ b/Templates/default/_static/css/layout.css
@@ -28,11 +28,10 @@ body {
 }
 
     #headerWrapper  header {
-        background:url('../img/sprite.jpg') no-repeat 0 0;
+        background:url('../img/header.jpg') no-repeat 0 0;
         position:relative;
         background-position:center 0;
         height:164px;
-        padding:0 1px;
     }
 
 
@@ -127,8 +126,7 @@ body {
 
 /** Middle Content */
 #contentWrapper {
-    background:url('../img/sprite.jpg') no-repeat 0 0;
-    background-position:center -161px;
+    background:url('../img/contentBg.jpg') no-repeat 50% 3px;
 }
 
     #content {
@@ -164,7 +162,6 @@ body {
     border-left:1px solid #BBB;
     border-right:1px solid #BBB;
     width:960px;
-
 }
 
 #footerWrapper {
